<resources>
    <string name="app_name">Demo</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAc7qQLc4v6Z-fWqAOg9Kd_POb8qDGuC_8</string>
    <string name="next">NEXT</string>
    <string name="music_image">Music Image</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="delete_user">DELETE USER</string>
    <string name="welcome">Welcome\u0020</string>
    <string name="user_password">\u0020 your password is \u0020</string>
    <string name="user_deleted">User deleted</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="theme">Theme</string>
    <string name="load_movie">LOAD MOVIE</string>
    <string name="camera">camera</string>
    <string name="load_map">Map</string>
    <string name="capture">capture</string>
    <string name="execute">execute</string>
    <string name="msg_token_fmt">Token: %s</string>
    <string name="playpause">playpause</string>
</resources>
